--- a/src/org/in5bm/octaviocorzo/joseherrera/views/AsignacionesAlumnosView.fxml
+++ b/src/org/in5bm/octaviocorzo/joseherrera/views/AsignacionesAlumnosView.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -246,8 +246,8 @@
                         </Label>
                         <TextField fx:id="txtId" disable="true" editable="false" GridPane.columnIndex="1" />
                         <ComboBox fx:id="cmbAlumno" disable="true" prefHeight="25.0" prefWidth="201.0" GridPane.columnIndex="4" />
-                        <DatePicker fx:id="dpkFechaAsignacion" disable="true" prefHeight="25.0" prefWidth="215.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <ComboBox fx:id="cmbCurso" disable="true" prefHeight="25.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                        <JFXDatePicker fx:id="dpkFechaAsignacion" defaultColor="#de0404" disable="true" prefHeight="28.0" prefWidth="278.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
