--- a/src/org/in5bm/octaviocorzo/joseherrera/views/HorariosView.fxml
+++ b/src/org/in5bm/octaviocorzo/joseherrera/views/HorariosView.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXTimePicker?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="950.0" stylesheets="@../resources/css/EstiloSalones.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.in5bm.octaviocorzo.joseherrera.controllers.CursosController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="950.0" stylesheets="@../resources/css/EstiloSalones.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.in5bm.octaviocorzo.joseherrera.controllers.HorariosController">
    <children>
       <BorderPane prefHeight="600.0" prefWidth="950.0">
          <left>
@@ -28,16 +28,16 @@
                <children>
                   <Pane id="pane-image" layoutX="42.0" prefHeight="186.0" prefWidth="155.0">
                      <children>
-                        <VBox alignment="TOP_CENTER" layoutX="14.0" prefHeight="132.0" prefWidth="116.0" style="-fx-background-color: #EAADAD;">
+                        <VBox alignment="TOP_CENTER" layoutX="9.0" prefHeight="132.0" prefWidth="106.0" style="-fx-background-color: #EAADAD;">
                            <children>
-                              <Label text="Cursos">
+                              <Label text="Horarios">
                                  <font>
                                     <Font name="System Bold" size="18.0" />
                                  </font>
                               </Label>
-                              <ImageView fitHeight="122.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="118.0" fitWidth="127.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../resources/images/curso-online.png" />
+                                    <Image url="@../resources/images/calendario.png" />
                                  </image>
                               </ImageView>
                            </children>
@@ -133,31 +133,17 @@
                         <Image url="@../resources/images/Figura3.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="6.0" layoutY="528.0" onMouseClicked="#clicRegresar" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="536.0" onMouseClicked="#clicRegresar" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/images/boton-de-flecha-izquierda.png" />
                      </image>
                   </ImageView>
-                  <TableView fx:id="tblCursos" layoutX="64.0" layoutY="179.0" onKeyReleased="#seleccionarElemento" onMouseClicked="#seleccionarElemento" prefHeight="399.0" prefWidth="633.0">
-                    <columns>
-                      <TableColumn fx:id="colId" prefWidth="46.0" text="Id" />
-                      <TableColumn fx:id="colNombreCurso" prefWidth="92.0" text="Nombre Curso" />
-                        <TableColumn fx:id="colCiclo" prefWidth="53.0" text="Ciclo" />
-                        <TableColumn fx:id="colCupoMaximo" minWidth="2.0" prefWidth="55.0" text="Maximo" />
-                        <TableColumn fx:id="colCupoMinimo" prefWidth="59.0" text="Minimo" />
-                        <TableColumn fx:id="colCodigoTecnico" prefWidth="114.0" text="Codigo Tecnico" />
-                        <TableColumn fx:id="colHorarioId" prefWidth="81.0" text="Id Horario" />
-                        <TableColumn fx:id="colInstructor" prefWidth="61.0" text="Instructor" />
-                        <TableColumn fx:id="colSalonId" prefWidth="75.0" text="Id Salon" />
-                    </columns>
-                  </TableView>
-                  <GridPane layoutX="22.0" layoutY="14.0">
+                  <GridPane layoutX="39.0" layoutY="14.0" prefHeight="141.0" prefWidth="550.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="135.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="243.0" minWidth="215.0" prefWidth="215.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="161.20001220703125" minWidth="10.0" prefWidth="161.20001220703125" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="271.599951171875" minWidth="241.19998779296873" prefWidth="241.19998779296873" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="50.0" prefWidth="50.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="125.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="150.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -165,69 +151,76 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label prefHeight="27.0" prefWidth="96.0" text="Id curso">
-                           <font>
-                              <Font name="System Bold" size="15.0" />
-                           </font>
-                        </Label>
-                        <Label prefHeight="25.0" prefWidth="146.0" text="Nonmbre del curso" GridPane.rowIndex="1">
+                        <Label prefHeight="27.0" prefWidth="90.0" text="Id horario:">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <Label text="Ciclo escolar" GridPane.rowIndex="2">
+                        <Label text="Horario de inicio" GridPane.rowIndex="2">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <Label text="Cupo Maximo" GridPane.rowIndex="3">
+                        <Label text="Horario Salida" GridPane.rowIndex="4">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
-                        <Label text="Cupo minimo" GridPane.rowIndex="4">
-                           <font>
-                              <Font name="System Bold" size="16.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="12.0" prefHeight="27.0" prefWidth="37.0" GridPane.columnIndex="3">
-                           <font>
-                              <Font name="System Bold" size="16.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="43.0" text="Carrera Tecnica" GridPane.columnIndex="3" GridPane.rowIndex="1">
-                           <font>
-                              <Font name="System Bold" size="16.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="73.0" text="Horario" GridPane.columnIndex="3" GridPane.rowIndex="2">
-                           <font>
-                              <Font name="System Bold" size="16.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="103.0" text="Instructor" GridPane.columnIndex="3" GridPane.rowIndex="3">
-                           <font>
-                              <Font name="System Bold" size="16.0" />
-                           </font>
-                        </Label>
-                        <Label layoutX="10.0" layoutY="133.0" text="Salon" GridPane.columnIndex="3" GridPane.rowIndex="4">
+                        <Label layoutX="10.0" layoutY="12.0" prefHeight="27.0" prefWidth="37.0" text="Dia" GridPane.columnIndex="3">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txtId" disable="true" editable="false" GridPane.columnIndex="1" />
-                        <TextField fx:id="txtNombreCurso" disable="true" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Spinner fx:id="spnCiclo" disable="true" editable="true" prefHeight="25.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Spinner fx:id="spnCupoMaximo" disable="true" editable="true" prefHeight="25.0" prefWidth="254.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Spinner fx:id="spnCupoMinimo" disable="true" editable="true" prefHeight="25.0" prefWidth="269.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <ComboBox fx:id="cmbCarreraTecnica" disable="true" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                        <ComboBox fx:id="cmbHorario" disable="true" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                        <ComboBox fx:id="cmbInstructor" disable="true" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                        <ComboBox fx:id="cmbSalon" disable="true" prefWidth="150.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+                        <CheckBox fx:id="ckbLunes" disable="true" mnemonicParsing="false" text="Lunes" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="System Bold Italic" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <CheckBox fx:id="ckbMartes" disable="true" mnemonicParsing="false" text="Martes" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="System Bold Italic" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <CheckBox fx:id="ckbMiercoles" disable="true" mnemonicParsing="false" text="Miercoles" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                           <font>
+                              <Font name="System Bold Italic" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <CheckBox fx:id="ckbJueves" disable="true" mnemonicParsing="false" text="Jueves" GridPane.columnIndex="3" GridPane.rowIndex="4">
+                           <font>
+                              <Font name="System Bold Italic" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <CheckBox fx:id="ckbViernes" disable="true" mnemonicParsing="false" text="Viernes" GridPane.columnIndex="3" GridPane.rowIndex="5">
+                           <font>
+                              <Font name="System Bold Italic" size="12.0" />
+                           </font>
+                        </CheckBox>
+                        <JFXTimePicker fx:id="tpkHoraInicio" defaultColor="#d63131" disable="true" prefHeight="28.0" prefWidth="294.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <JFXTimePicker fx:id="tpkHoraSalida" defaultColor="#d73131" disable="true" prefHeight="28.0" prefWidth="314.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <CheckBox fx:id="ckbMiercoles1" disable="true" layoutX="435.0" layoutY="83.0" mnemonicParsing="false" text="Miercoles">
+                           <font>
+                              <Font name="System Bold Italic" size="12.0" />
+                           </font>
+                        </CheckBox>
                      </children>
                   </GridPane>
+                  <TableView fx:id="tblHorarios" layoutX="70.0" layoutY="177.0" onKeyReleased="#seleccionarElemento" onMouseClicked="#seleccionarElemento" prefHeight="384.0" prefWidth="623.0">
+                    <columns>
+                      <TableColumn fx:id="colId" prefWidth="75.0" text="Id" />
+                      <TableColumn fx:id="colHoraInicio" prefWidth="75.0" text="Hora Inicio" />
+                        <TableColumn fx:id="colHoraSalida" prefWidth="75.0" text="Hora Salida" />
+                        <TableColumn fx:id="colLunes" prefWidth="75.0" text="Lunes" />
+                        <TableColumn fx:id="colMartes" prefWidth="75.0" text="Martes" />
+                        <TableColumn fx:id="colMiercoles" prefWidth="75.0" text="Miercoles" />
+                        <TableColumn fx:id="colJueves" prefWidth="91.9998779296875" text="Jueves" />
+                        <TableColumn fx:id="colViernes" prefWidth="78.99993896484375" text="Viernes" />
+                    </columns>
+                  </TableView>
                </children>
                <padding>
                   <Insets left="100.0" right="100.0" />
