--- a/src/org/in5bm/octaviocorzo/joseherrera/views/InstructoresView.fxml
+++ b/src/org/in5bm/octaviocorzo/joseherrera/views/InstructoresView.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDatePicker?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -285,13 +285,13 @@
                         <TextField fx:id="txtDireccion" disable="true" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                         <TextField fx:id="txtEmail" disable="true" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="2" />
                         <TextField fx:id="txtTelefono" disable="true" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                        <DatePicker fx:id="dpkFechaNacimiento" disable="true" editable="false" GridPane.columnIndex="4" GridPane.rowIndex="4" />
                         <Label text="Id" GridPane.columnIndex="3">
                            <font>
                               <Font name="System Bold" size="16.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txtId" disable="true" editable="false" GridPane.columnIndex="4" />
+                        <JFXDatePicker fx:id="dpkFechaNacimiento" defaultColor="#de0404d1" disable="true" GridPane.columnIndex="4" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
                </children>
